# wirenboard

./: .gitignore  CODEOWNERS  LICENSE  README-wbrepo.md  README.md  wbdev  wbdev-wheezy  wbrepo
boards/: 2-usbgadget.sh  (+28 more)
contrib/deb/mosquitto/mosquitto-1.3.4/: CMakeLists.txt  ChangeLog.txt  Makefile  changeset  compiling.txt  config.mk  mosquitto.conf  readme-windows.txt  readme.txt
contrib/deb/mosquitto/mosquitto-1.3.4/.pc/: applied-patches
contrib/deb/mosquitto/mosquitto-1.3.4/.pc/enable-libwrap.patch/: config.mk
contrib/deb/mosquitto/mosquitto-1.3.4/.pc/fix-prefix.patch/: config.mk
contrib/deb/mosquitto/mosquitto-1.3.4/.pc/nostrip.patch/client/: Makefile
contrib/deb/mosquitto/mosquitto-1.3.4/.pc/nostrip.patch/src/: Makefile
contrib/deb/mosquitto/mosquitto-1.3.4/.pc/pynomake.patch/: config.mk
contrib/deb/mosquitto/mosquitto-1.3.4/client/: CMakeLists.txt  Makefile  mosquitto_sub  pub_client.c  sub_client.c
contrib/deb/mosquitto/mosquitto-1.3.4/debian/: changelog  control  files  libmosquitto-dev.install  libmosquitto-dev.substvars  libmosquitto1.install  libmosquitto1.substvars  libmosquitto1.symbols  libmosquittopp-dev.install  libmosquittopp1.install  libmosquittopp1.substvars  libmosquittopp1.symbols  mosquitto-clients.substvars  mosquitto-dbg.substvars  mosquitto.dirs  mosquitto.install  mosquitto.postinst  mosquitto.postinst.debhelper  mosquitto.postrm  mosquitto.postrm.debhelper  mosquitto.prerm.debhelper  mosquitto.substvars  mosquitto.upstart  python-mosquitto.install  python-mosquitto.postinst.debhelper  python-mosquitto.prerm.debhelper  python-mosquitto.substvars  python3-mosquitto.install  python3-mosquitto.postinst.debhelper  python3-mosquitto.prerm.debhelper  python3-mosquitto.substvars  rules  watch
contrib/deb/mosquitto/mosquitto-1.3.4/debian/libmosquitto-dev/DEBIAN/: control  md5sums
contrib/deb/mosquitto/mosquitto-1.3.4/debian/libmosquitto1/DEBIAN/: control  md5sums  shlibs  symbols
contrib/deb/mosquitto/mosquitto-1.3.4/debian/libmosquittopp-dev/DEBIAN/: control  md5sums
contrib/deb/mosquitto/mosquitto-1.3.4/debian/libmosquittopp1/DEBIAN/: control  md5sums  shlibs  symbols
contrib/deb/mosquitto/mosquitto-1.3.4/debian/patches/: debian-config.patch  disable-bad-test.patch  enable-libwrap.patch  fix-prefix.patch  mosquitto_sub_exit_after  nostrip.patch  pynomake.patch  series
contrib/deb/mosquitto/mosquitto-1.3.4/examples/temperature_conversion/: temperature_conversion.cpp
contrib/deb/mosquitto/mosquitto-1.3.4/installer/: mosquitto-cygwin.nsi  mosquitto.nsi
contrib/deb/mosquitto/mosquitto-1.3.4/lib/: Makefile  messages_mosq.c  mosquitto.h
contrib/deb/mosquitto/mosquitto-1.3.4/lib/cpp/: Makefile  libmosquittopp.so.1
contrib/deb/mosquitto/mosquitto-1.3.4/lib/python/: setup.py
contrib/deb/mosquitto/mosquitto-1.3.4/man/: Makefile  html.xsl  libmosquitto.3  libmosquitto.3.xml  mosquitto-tls.7  mosquitto.8  mosquitto.8.xml  mosquitto.conf.5  mosquitto.conf.5.xml  mosquitto_passwd.1  mosquitto_passwd.1.xml  mosquitto_pub.1.xml  mosquitto_sub.1.xml  mqtt.7
contrib/deb/mosquitto/mosquitto-1.3.4/security/: mosquitto.apparmor
contrib/deb/mosquitto/mosquitto-1.3.4/service/upstart/: mosquitto.conf
contrib/deb/mosquitto/mosquitto-1.3.4/src/: CMakeLists.txt  Makefile  bridge.c  conf.c  context.c  database.c  lib_load.h  logging.c  loop.c  mosquitto  mosquitto.c  mosquitto_broker.h  mosquitto_passwd.c  mosquitto_plugin.h  net.c  persist.c  persist.h  read_handle.c  read_handle_client.c  read_handle_server.c  security.c  security_default.c  send_server.c  service.c  subs.c  sys_tree.c
contrib/deb/mosquitto/mosquitto-1.3.4/src/db_dump/: Makefile  db_dump.c
contrib/deb/mosquitto/mosquitto-1.3.4/test/: mosq_test.py
contrib/deb/mosquitto/mosquitto-1.3.4/test/broker/: 01-connect-anon-denied.py  01-connect-invalid-id-0-311.py  01-connect-invalid-id-0.py  01-connect-invalid-id-24.py  01-connect-invalid-id-missing.py  01-connect-invalid-protonum.py  01-connect-success.py  01-connect-uname-no-password-denied.py  01-connect-uname-password-denied.py  01-connect-uname-password-success.py  02-subpub-qos0.py  02-subpub-qos1.py  02-subpub-qos2.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe-qos0.py  02-unsubscribe-qos1.py  02-unsubscribe-qos2.py  03-publish-b2c-disconnect-qos1.py  03-publish-b2c-disconnect-qos2.py  03-publish-b2c-timeout-qos1.py  03-publish-b2c-timeout-qos2.py  03-publish-c2b-disconnect-qos2.py  03-publish-c2b-timeout-qos2.py  03-publish-qos1.py  03-publish-qos2.py  04-retain-qos0-clear.py  04-retain-qos0-fresh.py  04-retain-qos0-repeated.py  04-retain-qos0.py  04-retain-qos1-qos0.py  05-clean-session-qos1.py  06-bridge-b2br-disconnect-qos1.py  06-bridge-b2br-disconnect-qos2.py  06-bridge-br2b-disconnect-qos1.py  06-bridge-br2b-disconnect-qos2.py  06-bridge-reconnect-local-out.py  07-will-acl-denied.conf  07-will-acl-denied.py  (+26 more)
contrib/deb/mosquitto/mosquitto-1.3.4/test/lib/: 01-con-discon-success.py  01-keepalive-pingreq.py  01-no-clean-session.py  01-unpwd-set.py  01-will-set.py  01-will-unpwd-set.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe.py  03-publish-b2c-qos1.py  03-publish-b2c-qos2.py  03-publish-c2b-qos1-disconnect.py  03-publish-c2b-qos1-timeout.py  03-publish-c2b-qos2-disconnect.py  03-publish-c2b-qos2-timeout.py  03-publish-c2b-qos2.py  03-publish-qos0-no-payload.py  03-publish-qos0.py  04-retain-qos0.py  08-ssl-bad-cacert.py  08-ssl-connect-cert-auth.py  08-ssl-connect-no-auth.py  08-ssl-fake-cacert.py  09-util-topic-matching.py  09-util-topic-tokenise.py  Makefile
(+621 files in other folders)
